# gur

./: .gitignore  README.md  hello.py  manage.py  package-lock.json  package.json  pyproject.toml  rspack.config.js  rspack.config.ts
app/: api.py  forms.py  hookmodel.py  models.py  services.py  tasks.py  urls.py  views.py  webhook.py
app/migrations/: 0001_initial.py  0002_remove_package_useflags_category_updated_at_and_more.py  0003_keyword_comment_package_keywords.py  0004_ebuild.py
frontend/: index.css  index.ts  variable.scss
gur/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  dashboard.html  index.html  package.html
templates/package/: new.html  show.html
templates/registration/: login.html  register.html
